# probe-prompt-subversion

./: .env.example  .gitignore  CHANGELOG.md  EXPERIMENT_LOG.md  README.md  RESEARCH_EXTENSIONS.md  blog_post_outline.md  log.md  modal_collect.py  pyproject.toml  requirements.txt  semantic_specificity_test.py
blog_visuals/: generate_visuals.py
notebooks/: 0_baseline.ipynb  experiment_runner.ipynb
prompts/: scaled_prompts_2000.json  test_prompts.json
results/: latest
results/color_analysis/: README.md
results/conscious_control/: README.md
results/core_attacks/: README.md
results/ultimate_experiments/: README.md
results/v1/: config.json
results/v10/: config.json  results.json
results/v11/: layer_14_results.json  layer_27_results.json  layer_29_results.json  layer_31_results.json  layer_sweep_analysis.json
results/v13/: config.json  results.json
results/v14/: probe.pkl
results/v15/: results.json
results/v16/: config.json
results/v17/: probe.pkl
results/v18/: config.json  probe.pkl
results/v2/: config.json
results/v20/: probe.pkl
results/v26/: config.json  probe.pkl
results/v27/: results.json
results/v28/: config.json
results/v29/: config.json
results/v3/: config.json  results.json
results/v33/: config.json
results/v35/: probe.pkl
scripts/: analyze_results.py  generate_prompts.py  run_conscious_control.py  run_critical_experiments.py  run_experiment.py  view_results.py
src/: __init__.py  collect.py  experiment_runner.py  fit_probe.py  plot.py  results_viewer.py  versioning.py
subvert/: __init__.py
(+201 files in other folders)
